[project]
name = "neuralforge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Orpheus Lummis", email = "o@orpheuslummis.info" }
]
dependencies = [
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "torchaudio>=2.1.1",
    "ipykernel>=6.27.1",
    "einops>=0.7.0",
    "fancy_einsum>=0.0.3",
    "transformer_lens>=1.12.0",
    "pytest>=7.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
